--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2017-01-04  Alexandre Oliva <aoliva@redhat.com>
+
+	* multiple_target.c (create_dispatcher_calls): Init e_next.
+	* tree-ssa-loop-split.c (split_loop): Init border.
+	* tree-vect-loop.c (vect_determine_vectorization_factor): Init
+	scalar_type.
+
 2017-01-04  Michael Meissner  <meissner@linux.vnet.ibm.com>
 
 	PR target/71977
