[bootstrap-O3,fortran] add a NULL initializer to avoid a warning at -O3
Building with the bootstrap-O3 configuration option fails to compile
fortran/module.c due to an AFAICT false-positive warning about an
uninitialized use of a variable.

This patch adds a dummy initializer to silence it.

for  gcc/fortran/ChangeLog

	* module.c (load_omp_udrs): Initialize name.

git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244087 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/fortran/ChangeLog
+++ b/gcc/fortran/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-04  Alexandre Oliva <aoliva@redhat.com>
+
+	* module.c (load_omp_udrs): Initialize name.
+
 2017-01-02  Janne Blomqvist  <jb@gcc.gnu.org>
 
 	PR fortran/78534
