[-fcompare-debug] skip more debug stmts in cleanup_empty_eh
Various Ada RTS files failed -fcompare-debug compilation because debug
stmts prevented EH cleanups from taking place.  Adjusting
cleanup_empty_eh to skip them fixes it.

for  gcc/ChangeLog

	* gimple-iterator.h (gsi_one_nondebug_before_end_p): New.
	* tree-eh.c (cleanup_empty_eh): Skip more debug stmts.

git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244088 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2017-01-04  Alexandre Oliva <aoliva@redhat.com>
 
+	* gimple-iterator.h (gsi_one_nondebug_before_end_p): New.
+	* tree-eh.c (cleanup_empty_eh): Skip more debug stmts.
+
+2017-01-04  Alexandre Oliva <aoliva@redhat.com>
+
 	* multiple_target.c (create_dispatcher_calls): Init e_next.
 	* tree-ssa-loop-split.c (split_loop): Init border.
 	* tree-vect-loop.c (vect_determine_vectorization_factor): Init
