--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2017-01-04  Alexandre Oliva <aoliva@redhat.com>
 
+	* cfgexpand.c (expand_gimple_basic_block): Disregard debug
+	insns after final jump in test to emit dummy move.
+
+2017-01-04  Alexandre Oliva <aoliva@redhat.com>
+
 	* gimple-iterator.h (gsi_one_nondebug_before_end_p): New.
 	* tree-eh.c (cleanup_empty_eh): Skip more debug stmts.
 
