--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2017-01-04  Alexandre Oliva <aoliva@redhat.com>
 
+	* df-scan.c (df_ref_create_structure): Make regno unsigned,
+	to match the caller.
+
+2017-01-04  Alexandre Oliva <aoliva@redhat.com>
+
 	* cfgexpand.c (expand_gimple_basic_block): Disregard debug
 	insns after final jump in test to emit dummy move.
 
