[bootstrap-O3] add a default initializer to avoid a warning at -O3
Building with the bootstrap-O3 configuration option fails to compile
input.c due to an AFAICT false-positive warning about an uninitialized
use of a variable.

This patch adds a default initializer to silence it.

for  gcc/ChangeLog

	* input.c (assert_char_at_range): Default-initialize
	actual_range.

git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244091 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2017-01-04  Alexandre Oliva <aoliva@redhat.com>
 
+	* input.c (assert_char_at_range): Default-initialize
+	actual_range.
+
+2017-01-04  Alexandre Oliva <aoliva@redhat.com>
+
 	* df-scan.c (df_ref_create_structure): Make regno unsigned,
 	to match the caller.
 
