--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-05  Tim Shen  <timshen@google.com>
+
+	PR libstdc++/78996
+	* include/std/variant (__gen_vtable_impl): rename __unused to
+	__dimensions to avoid naming conflict.
+
 2017-01-04  Jonathan Wakely  <jwakely@redhat.com>
 
 	PR libstdc++/78968
