vimrc: fix TAB settings
2017-01-05  Martin Liska  <mliska@suse.cz>

	* vimrc: Update indentation definition.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244094 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,8 @@
+
+2017-01-05  Martin Liska  <mliska@suse.cz>
+
+	* vimrc: Update indentation definition.
+
 2017-01-04  Jakub Jelinek  <jakub@redhat.com>
 
 	* update-copyright.py (GCCCmdLine): Add include, libcc1, libiberty,
