--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,13 @@
+2017-01-05  Martin Liska  <mliska@suse.cz>
+
+	PR sanitizer/78815
+	* gimplify.c (gimplify_decl_expr): Compare to
+	asan_poisoned_variables instread of checking flags.
+	(gimplify_target_expr): Likewise.
+	(gimplify_expr): Likewise.
+	(gimplify_function_tree): Conditionally initialize
+	asan_poisoned_variables.
+
 2017-01-04  Jeff Law  <law@redhat.com>
 
 	PR tree-optimizatin/78812
