--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-05  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
+
+	* config/s390/s390.c (s390_expand_setmem): Avoid overlapping bytes
+	between loop iterations.
+
 2017-01-05  Martin Liska  <mliska@suse.cz>
 
 	PR sanitizer/78815
