--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-05  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
+
+	* gcc.target/s390/memcpy-1.c: New test.
+
 2017-01-04  Jeff Law  <law@redhat.com>
 
 	PR tree-optimization/78812
