S/390: Additional memset/memcpy runtime tests.
These were provided by Dominik to check more of the corner case in our
memset/memcpy inline code.

gcc/testsuite/ChangeLog:

2017-01-05  Dominik Vogt  <vogt@linux.vnet.ibm.com>

	* gcc.target/s390/memcpy-2.c: New test.
	* gcc.target/s390/memset-2.c: New test.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244099 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-05  Dominik Vogt  <vogt@linux.vnet.ibm.com>
+
+	* gcc.target/s390/memcpy-2.c: New test.
+	* gcc.target/s390/memset-2.c: New test.
+
 2017-01-05  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
 
 	* gcc.target/s390/memcpy-1.c: New test.
