cp/ 	PR c++/78765 	* pt.c (convert_nontype_argument): Don't try and see if integral 	or enum expressions are constants prematurely.
	testsuite/
	PR c++/78765
	* g++.dg/cpp0x/pr78765.C: New.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244101 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-05  Nathan Sidwell  <nathan@acm.org>
+
+	PR c++/78765
+	* pt.c (convert_nontype_argument): Don't try and see if integral
+	or enum expressions are constants prematurely.
+
 2017-01-04  Marek Polacek  <polacek@redhat.com>
 
 	PR c++/64767
