HSA: implement DIVMOD internal function call
2017-01-05  Martin Liska  <mliska@suse.cz>

	* hsa-gen.c (gen_hsa_divmod): New function.
	(gen_hsa_insn_for_internal_fn_call): Use the function
	for IFN_DIVMOD.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244104 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2017-01-05  Martin Liska  <mliska@suse.cz>
 
+	* hsa-gen.c (gen_hsa_divmod): New function.
+	(gen_hsa_insn_for_internal_fn_call): Use the function
+	for IFN_DIVMOD.
+
+2017-01-05  Martin Liska  <mliska@suse.cz>
+
 	PR pch/78970
 	* gcc.c (lookup_compiler): Reject '-' filename for a precompiled
 	header.
