Remove unnecessary typedef from std::function
	* include/bits/std_function.h (function::_Signature_type): Remove.
	(function::function(_Functor)): Adjust.

git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244107 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-05  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/bits/std_function.h (function::_Signature_type): Remove.
+	(function::function(_Functor)): Adjust.
+
 2017-01-05  Tim Shen  <timshen@google.com>
 
 	PR libstdc++/78996
