--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -8007,35 +8007,29 @@
   rtx val = operands[2];
   HOST_WIDE_INT len = INTVAL (operands[3]);
   HOST_WIDE_INT pos = INTVAL (operands[4]);
-  machine_mode mode, submode;
+  machine_mode mode = GET_MODE (val);
 
-  mode = GET_MODE (val);
-  if (MEM_P (val))
+  if (SUBREG_P (val))
     {
-      /* ??? Combine likes to put non-volatile mem extractions in QImode
-	 no matter the size of the test.  So find a mode that works.  */
-      if (! MEM_VOLATILE_P (val))
+      machine_mode submode = GET_MODE (SUBREG_REG (val));
+
+      /* Narrow paradoxical subregs to prevent partial register stalls.  */
+      if (GET_MODE_BITSIZE (mode) > GET_MODE_BITSIZE (submode)
+	  && GET_MODE_CLASS (submode) == MODE_INT)
 	{
-	  mode = smallest_mode_for_size (pos + len, MODE_INT);
-	  val = adjust_address (val, mode, 0);
+	  val = SUBREG_REG (val);
+	  mode = submode;
 	}
     }
-  else if (SUBREG_P (val)
-	   && (submode = GET_MODE (SUBREG_REG (val)),
-	       GET_MODE_BITSIZE (mode) > GET_MODE_BITSIZE (submode))
-	   && pos + len <= GET_MODE_BITSIZE (submode)
-	   && GET_MODE_CLASS (submode) == MODE_INT)
+
+  /* Small HImode tests can be converted to QImode.  */
+  if (register_operand (val, HImode) && pos + len <= 8)
     {
-      /* Narrow a paradoxical subreg to prevent partial register stalls.  */
-      mode = submode;
-      val = SUBREG_REG (val);
-    }
-  else if (mode == HImode && pos + len <= 8)
-    {
-      /* Small HImode tests can be converted to QImode.  */
-      mode = QImode;
       val = gen_lowpart (QImode, val);
+      mode = QImode;
     }
+
+  gcc_assert (pos + len <= GET_MODE_PRECISION (mode));
 
   wide_int mask
     = wi::shifted_mask (pos, len, false, GET_MODE_PRECISION (mode));
